[tool.poetry]
name = "overloaded-harbor-deps"
version = "0.1.0"
description = ""
authors = ["Vitico99 <nenevictor99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
